# goblin-signing

./: .gitignore  Cargo.toml  README.md  default.nix
examples/: sign_binary.rs  verify_binary.rs
src/: authenticode.rs  certificate.rs  errors.rs  lib.rs  sign.rs  verify.rs
src/efi/: common.rs  errors.rs  mod.rs  signature_lists.rs  variable.rs
src/for_cryptoki/: algorithms.rs  keypair.rs  signature_request.rs
src/pkcs11/: keypair.rs  mod.rs  signature_request.rs
tests/: test_snakeoil_sign.rs
tests/bins/: nixos-uki-tampered.efi  nixos-uki.efi
