[package]
name = "goblin-signing"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/RaitoBezarius/goblin-signing"
description = "A subcrate for signing PE binaries using Goblin"
keywords = ["parsing", "signing", "pe", "goblin", "cryptography"]
categories = ["cryptography", "parsing"]

[dependencies]
digest = { version = "0.10.6", features = [ "alloc" ] }
# waiting for a release of goblin
goblin = { git = "https://github.com/RaitoBezarius/goblin.git", branch = "preps-for-ifrit-1" }
# waiting for a release of ifrit
ifrit = { git = "https://github.com/RaitoBezarius/ifrit.git" }
cms = { version = "0.2.2", features = [ "builder" ] }
der = { version = "0.7.7", default-features = false }
x509-cert = { version = "0.2.3" }
const-oid = { version = "0.9.3", features = [ "db" ] }
sha2 = { version = "0.10.6", features = [ "oid" ] }
signature = "2.1.0"
ecdsa = { version = "0.16.9", features = [ "der" ] }
ed25519 = "2.2.3"
num-bigint = "0.4.3"
spki = "0.7.3"
cryptoki = { git = "https://github.com/baloo/rust-cryptoki", branch = "baloo/rustcrypto/init" }
cryptoki-rustcrypto = { git = "https://github.com/baloo/rust-cryptoki", branch = "baloo/rustcrypto/init" }
thiserror = "1.0.49"
stderrlog = "0.5.4"
x509-verify = { version = "0.4.2", features = [ "x509", "ecdsa" ] }
scroll = { version = "0.12.0", features = [ "derive" ] }
uuid = { version = "1.5.0", features = [ "v4" ] }
percent-encoding = "2.3.0"
uriparse = "0.6.4"
log = "0.4.20"
pkcs11-uri = "0.1.3"
p256 = "0.13.2"

[[example]]
name = "sign_binary"

[[example]]
name = "verify_binary"

[dev-dependencies]
bitflags = "2.4.1"
clap = { version = "4.4.8", features = [ "derive" ] }
rpassword = "7.3.1"
